Prevent form from being crushed when page width too small, page consequently has a minimum width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ pre {
 
 	form {
 		margin-left: auto;
-		padding: 4px;
+		flex-shrink: 0;
 
 		table,
 		.actions {
@@ -100,7 +100,7 @@ pre {
 	}
 }
 
-#cont {
+#body {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 8px;
